--- a/css/common.css
+++ b/css/common.css
@@ -3,6 +3,17 @@ body {
     font-family: Helvetica, Tahoma, Arial;
     line-height: 1.4;
     color: #333;
+    font-size: 38px;
+}
+@media only screen and (min-device-width: 400px) {
+    body {
+        font-size: 26px;
+    }
+}
+@media only screen and (min-device-width: 600px) {
+    body {
+        font-size: 16px;
+    }
 }
 
 #container {
