--- a/css/common.css
+++ b/css/common.css
@@ -29,6 +29,9 @@ body {
     padding: 10px;
     border-radius: 3px;
 }
+#footer {
+    margin-top: 16px;
+}
 #navbar #title {
     font-size: 200%;
     display: inline-block;
@@ -73,7 +76,7 @@ code {
     color: #449;
 }
 pre {
-    margin: 0px 10px;
+    margin: 16px 10px;
     padding: 5px;
     border-radius: 5px;
     background: #e8e8e8;
