fixed typo in common.css

--- a/css/common.css
+++ b/css/common.css
@@ -92,7 +92,7 @@ a:hover {
 }
 .toggle-code {
     color: #4444aa;
-    font-weiht: bold;
+    font-weight: bold;
     cursor: pointer;
     border-radius: 3px;
     padding: 3px;
