--- a/src/stylesheets/extra.css
+++ b/src/stylesheets/extra.css
@@ -47,7 +47,7 @@ body[dir=rtl] .metadata.page-metadata .contributors-text{
   padding:0
 }
 
-/* to visibly hide latex code */
+/* Visually hide latex code */
 .mjx-copytext {
     font-size: 0;
 }
