rss icon in the header

--- a/src/overrides/partials/header.html
+++ b/src/overrides/partials/header.html
@@ -86,7 +86,11 @@
     {% if config.repo_url %}
       <div class="md-header__source">
         {% include "partials/source.html" %}
+        <a href="https://cp-algorithms.com/feed_rss_created.xml" title="RSS" class="md-content__button md-icon">
+          {% include ".fontawesome/solid/rss.svg" %}
+        </a>
       </div>
+
     {% endif %}
   </nav>
   {% if "navigation.tabs.sticky" in features %}
