--- a/src/overrides/partials/header.html
+++ b/src/overrides/partials/header.html
@@ -87,7 +87,9 @@
       <div class="md-header__source">
         {% include "partials/source.html" %}
         <a href="https://cp-algorithms.com/feed_rss_created.xml" title="RSS" class="md-content__button md-icon">
-          {% include ".fontawesome/solid/rss.svg" %}
+          <span class="rss icon">
+            {% include ".icons/fontawesome/solid/rss.svg" %}
+          </span>
         </a>
       </div>
 
