Remove vertical scrollbar from math latex elements

--- a/src/stylesheets/extra.css
+++ b/src/stylesheets/extra.css
@@ -51,3 +51,7 @@ body[dir=rtl] .metadata.page-metadata .contributors-text{
 .mjx-copytext {
     font-size: 0;
 }
+
+.arithmatex{
+  overflow-y: hidden !important;
+}
