--- a/src/overrides/partials/content.html
+++ b/src/overrides/partials/content.html
@@ -15,7 +15,7 @@ Describe the issue of this article in detail.
 }
 </script>
 {% if page.edit_url %}
-<a href="{{ page.edit_url }}" title="{{ lang.t('edit.link.title') }}" class="md-content__button md-icon">
+<a href="{{ page.edit_url }}" title="{{ lang.t('action.edit') }}" class="md-content__button md-icon">
   {% include ".icons/material/pencil.svg" %}
 </a>
 <a id="report_issue_a" href="" title="Report a problem" class="md-content__button md-icon">
