--- a/src/overrides/partials/content.html
+++ b/src/overrides/partials/content.html
@@ -1,7 +1,7 @@
 <script type="text/javascript">
 window.onload = function() {
 	const newIssueURL = "https://github.com/cp-algorithms/cp-algorithms/issues/new";
-  const issueTitle = `Problem on article "{{page.title}}"`;
+  const issueTitle = "Problem on article " + {{page.title | tojson }};
 	const issueBody = `
  **Article:** [{{page.title}}](${window.location.href})
 
