--- a/src/overrides/partials/header.html
+++ b/src/overrides/partials/header.html
@@ -86,20 +86,15 @@
     {% if config.repo_url %}
       <div class="md-header__source">
         {% include "partials/source.html" %}
-      </div>
 
-      <div class="discord">
-      <a href="https://discord.gg/HZ5AecN3KX" title="Discord" class="md-content__button md-icon">
-          {% include ".icons/fontawesome/brands/discord.svg" %}
-      </a>
-      </div>
-    
-      <div class="rss icon">
-      <a href="https://cp-algorithms.com/feed_rss_created.xml" title="RSS" class="md-content__button md-icon">
+        <a href="https://cp-algorithms.com/feed_rss_created.xml" title="RSS" class="md-header__button md-icon" aria-label="RSS">
           {% include ".icons/fontawesome/solid/rss.svg" %}
-      </a>
+        </a>
+      
+        <a href="https://discord.gg/HZ5AecN3KX" title="Discord" class="md-header__button md-icon" aria-label="Discord">
+          {% include ".icons/fontawesome/brands/discord.svg" %}
+        </a>
       </div>
-
     {% endif %}
   </nav>
   {% if "navigation.tabs.sticky" in features %}
