--- a/src/overrides/partials/header.html
+++ b/src/overrides/partials/header.html
@@ -88,7 +88,7 @@
         {% include "partials/source.html" %}
       </div>
     {% endif %}
-    <div class="md-header__option>
+    <div class="md-header__option">
       <a href="https://cp-algorithms.com/feed_rss_created.xml" title="RSS" class="md-header__button md-icon" aria-label="RSS">
         {% include ".icons/fontawesome/solid/rss.svg" %}
       </a>
