--- a/src/overrides/partials/header.html
+++ b/src/overrides/partials/header.html
@@ -99,6 +99,12 @@
         {% include ".icons/fontawesome/brands/discord.svg" %}
       </a>
     </div>
+
+    <div class="md-header__option">
+      <a href="https://github.com/sponsors/cp-algorithms" title="GitHub Sponsors" class="md-header__button md-icon" aria-label="GitHub Sponsors">
+        {% include ".icons/fontawesome/solid/circle-dollar-to-slot.svg" %}
+      </a>
+    </div>
   </nav>
   {% if "navigation.tabs.sticky" in features %}
     {% if "navigation.tabs" in features %}
